# AI-Logistics-Email-Automation

./: .gitignore  README.md  date_utils.py  extractor_chain.py  gmail_service.py  main.py  models.py  pyproject.toml  report_excel.py
tests/: test_smoke.py
